deploy/service.yaml
# Copyright Contributors to the Open Cluster Management project

apiVersion: v1
kind: Service
metadata:
  name: clusterlifecycle-state-metrics
  namespace: open-cluster-management
  labels:
    ocm-app: clusterlifecycle-state-metrics
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: clusterlifecycle-state-metrics
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app: clusterlifecycle-state-metrics
